--- a/packages/Bundle/index.html
+++ b/packages/Bundle/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="dist/yourvic-umd-bundle.js"></script>
+<script src="dist/Main.yourvic-bundle.js"></script>
+<script src="dist/Maps.yourvic-bundle.js"></script>
 
 <p>Map:</p>
 <div id="mapContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
@@ -29,13 +29,13 @@
 </div>
 
 <script>
-  YourVic.mountMap('#map', {
+  YourVicMaps.mountMap('#map', {
     baseMapUrl: 'https://api.mapbox.com/styles/v1/myvictoira/cjio5h4do0g412smmef4qpsq5/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibXl2aWN0b2lyYSIsImEiOiJjamlvMDgxbnIwNGwwM2t0OWh3ZDJhMGo5In0.w_xKPPd39cwrS1F4_yy39g',
     center: [16136905.843820328, -4383057.013522999],
     zoom: 8
   })
 
-  YourVic.mountMapWithVectorLayer('#mapVector', {
+  YourVicMaps.mountMapWithVectorLayer('#mapVector', {
     baseMapUrl: 'https://api.mapbox.com/styles/v1/myvictoira/cjio5h4do0g412smmef4qpsq5/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibXl2aWN0b2lyYSIsImEiOiJjamlvMDgxbnIwNGwwM2t0OWh3ZDJhMGo5In0.w_xKPPd39cwrS1F4_yy39g',
     center: [16136905.843820328, -4383057.013522999],
     zoom: 5
@@ -45,7 +45,7 @@
     labelAttribute: 'name'
   })
 
-  YourVic.mountBarChart('#chart', {
+  YourVicMain.mountBarChart('#chart', {
     direction: 'horizontal',
     title: 'Sample Chart',
     data: {
@@ -61,7 +61,7 @@
     dataFormat: 'normal'
   })
 
-  YourVic.mountToggleList('#list', {
+  YourVicMain.mountToggleList('#list', {
     items: [
       { id: 'item1', title: 'Item 1', icon: 'map_marker', color: 'primary' },
       { id: 'item2', title: 'Item 2', icon: 'instagram', color: 'danger' },
