--- a/packages/Bundle/maps.html
+++ b/packages/Bundle/maps.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<!--<script src="dist/yourvic-bundle.js"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/@dpc-sdp/yourvic-bundle@dev/dist/yourvic-bundle.min.js"></script>
+<script src="dist/yourvic-bundle.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/@dpc-sdp/yourvic-bundle/dist/yourvic-bundle.min.js"></script>-->
 
 <p>Map:</p>
 <div id="mapContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
