refactor: use dev tag for yourvic-bundle

--- a/packages/Bundle/main.html
+++ b/packages/Bundle/main.html
@@ -6,7 +6,7 @@
 <body>
 
 <!--<script src="dist/yourvic-bundle.js"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/@dpc-sdp/yourvic-bundle/dist/yourvic-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@dpc-sdp/yourvic-bundle@dev/dist/yourvic-bundle.min.js"></script>
 
 <p>Address Search:</p>
 <div id="addressSearchContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
