--- a/packages/Bundle/main.html
+++ b/packages/Bundle/main.html
@@ -3,48 +3,48 @@
 <head>
   <meta charset="utf-8">
 </head>
-<body>
+<body style="padding-left: 10rem; padding-right: 10rem; padding-bottom: 3rem">
 
 <!--<script src="dist/yourvic-bundle.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/@dpc-sdp/yourvic-bundle@dev/dist/yourvic-bundle.js"></script>
 
-<p>Address Search:</p>
-<div id="addressSearchContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Address Search:</h3>
+<div id="addressSearchContainer" style="position: relative; width: 100%; height: 80px">
   <div id="addressSearch"></div>
 </div>
 
-<p>Area Search:</p>
-<div id="areaSearchContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Area Search:</h3>
+<div id="areaSearchContainer" style="position: relative; width: 100%; height: 80px">
   <div id="areaSearch"></div>
 </div>
 
-<p>Bar Chart:</p>
-<div id="barChartContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Bar Chart:</h3>
+<div id="barChartContainer" style="position: relative; width: 100%; height: 400px; margin-bottom: 50px">
   <div id="barChart"></div>
 </div>
 
-<p>Data Block:</p>
-<div id="DataBlockContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Data Block:</h3>
+<div id="DataBlockContainer" style="position: relative; width: 200px; height: 200px">
   <div id="dataBlock"></div>
 </div>
 
-<p>Line Chart:</p>
-<div id="lineChartContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Line Chart:</h3>
+<div id="lineChartContainer" style="position: relative; width: 100%; height: 400px; margin-bottom: 50px">
   <div id="lineChart"></div>
 </div>
 
-<p>Pie Chart:</p>
-<div id="pieChartContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Pie Chart:</h3>
+<div id="pieChartContainer" style="position: relative; width: 500px; height: 500px; margin-bottom: 50px">
   <div id="pieChart"></div>
 </div>
 
-<p>Toggle List:</p>
-<div id="listContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Toggle List:</h3>
+<div id="listContainer" style="position: relative; width: 100%; height: 300px; margin-bottom: 50px">
   <div id="list"></div>
 </div>
 
-<p>Tree Map:</p>
-<div id="treeMapContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Tree Map:</h3>
+<div id="treeMapContainer" style="position: relative; width:100%; height: 400px">
   <div id="treeMap"></div>
 </div>
 
