--- a/packages/Bundle/maps.html
+++ b/packages/Bundle/maps.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="utf-8">
 </head>
-<body>
+<body style="padding-left: 10rem; padding-right: 10rem; padding-bottom: 3rem">
 
 <!--<script src="dist/yourvic-bundle.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/@dpc-sdp/yourvic-bundle@dev/dist/yourvic-bundle.js"></script>
 
-<p>Map:</p>
-<div id="mapContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Map:</h3>
+<div id="mapContainer" style="position: relative; width: 100%; height: 400px; border: 1px solid black">
   <div id="map"></div>
 </div>
 
-<p>Map with Tile Layer:</p>
-<div id="mapTileLayerContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Map with Tile Layer:</h3>
+<div id="mapTileLayerContainer" style="position: relative; width: 100%; height: 400px; border: 1px solid black">
   <div id="mapTileLayer"></div>
 </div>
 
-<p>Map with Vector Layer:</p>
-<div id="mapVectorLayerContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Map with Vector Layer:</h3>
+<div id="mapVectorLayerContainer" style="position: relative; width: 100%; height: 400px; border: 1px solid black">
   <div id="mapVectorLayer"></div>
 </div>
 
-<p>Map with Vector Tile Layer:</p>
-<div id="mapVectorTileLayerContainer" style="position: relative; width: 600px; height: 400px; border: 1px solid black">
+<h3>Map with Vector Tile Layer:</h3>
+<div id="mapVectorTileLayerContainer" style="position: relative; width: 100%; height: 400px; border: 1px solid black">
   <div id="mapVectorTileLayer"></div>
 </div>
 
