fix: add long description examples to umd examples

--- a/packages/Bundle/main.html
+++ b/packages/Bundle/main.html
@@ -76,7 +76,8 @@
       ]
     },
     showLegend: true,
-    dataFormat: 'normal'
+    dataFormat: 'normal',
+    longDesc: 'https://www.w3.org/WAI/tutorials/images/complex/#image-containing-substantial-information'
   })
 
   YourVic.mountLineChart('#lineChart', {
@@ -91,7 +92,8 @@
       ]
     },
     showLegend: true,
-    dataFormat: 'normal'
+    dataFormat: 'normal',
+    longDesc: 'https://www.w3.org/WAI/tutorials/images/complex/#image-containing-substantial-information'
   })
 
   YourVic.mountPieChart('#pieChart', {
@@ -106,7 +108,8 @@
       ]
     },
     showLegend: true,
-    dataFormat: 'normal'
+    dataFormat: 'normal',
+    longDesc: 'https://www.w3.org/WAI/tutorials/images/complex/#image-containing-substantial-information'
   })
 
   YourVic.mountToggleList('#list', {
@@ -160,7 +163,8 @@
     ],
     valueAttr: 'value',
     labelAttr: 'name',
-    dataFormat: 'normal'
+    dataFormat: 'normal',
+    longDesc: 'https://www.w3.org/WAI/tutorials/images/complex/#image-containing-substantial-information'
   })
 </script>
 
