refactor: update case of MyVic to Myvic for consistent use in Vue

--- a/packages/Bundle/examples.html
+++ b/packages/Bundle/examples.html
@@ -24,11 +24,11 @@
 </div>
 
 <script>
-  MyVic.mountAreaWithDataExample('#areaWithData', {})
+  Myvic.mountAreaWithDataExample('#areaWithData', {})
 
-  MyVic.mountAreaWithMapExample('#areaWithMap', {})
+  Myvic.mountAreaWithMapExample('#areaWithMap', {})
 
-  MyVic.mountIncomeDataExample('#incomeData', {})
+  Myvic.mountIncomeDataExample('#incomeData', {})
 </script>
 
 </body>
