--- a/packages/Bundle/main.html
+++ b/packages/Bundle/main.html
@@ -49,11 +49,11 @@
 </div>
 
 <script>
-  MyVic.mountAddressSearch('#addressSearch', {})
+  Myvic.mountAddressSearch('#addressSearch', {})
 
-  MyVic.mountAreaSearch('#areaSearch', {})
+  Myvic.mountAreaSearch('#areaSearch', {})
 
-  MyVic.mountDataBlock('#dataBlock',
+  Myvic.mountDataBlock('#dataBlock',
     {
       data: {
         title: 'Title',
@@ -63,7 +63,7 @@
     }
   )
 
-  MyVic.mountBarChart('#barChart', {
+  Myvic.mountBarChart('#barChart', {
     direction: 'horizontal',
     title: 'Sample Chart',
     data: {
@@ -80,7 +80,7 @@
     longDesc: 'https://www.w3.org/WAI/tutorials/images/complex/#image-containing-substantial-information'
   })
 
-  MyVic.mountLineChart('#lineChart', {
+  Myvic.mountLineChart('#lineChart', {
     title: 'Sample Chart',
     data: {
       labels: ['January', 'February', 'March', 'April', 'May', 'June'],
@@ -96,7 +96,7 @@
     longDesc: 'https://www.w3.org/WAI/tutorials/images/complex/#image-containing-substantial-information'
   })
 
-  MyVic.mountPieChart('#pieChart', {
+  Myvic.mountPieChart('#pieChart', {
     title: 'Sample Chart',
     data: {
       labels: ['January', 'February', 'March', 'April', 'May', 'June'],
@@ -112,7 +112,7 @@
     longDesc: 'https://www.w3.org/WAI/tutorials/images/complex/#image-containing-substantial-information'
   })
 
-  MyVic.mountToggleList('#list', {
+  Myvic.mountToggleList('#list', {
     items: [
       { id: 'item1', title: 'Item 1', icon: 'map_marker', color: 'primary' },
       { id: 'item2', title: 'Item 2', icon: 'instagram', color: 'danger' },
@@ -129,7 +129,7 @@
     }
   })
 
-  MyVic.mountTreeMap('#treeMap', {
+  Myvic.mountTreeMap('#treeMap', {
     title: 'Title',
     data: [
       {
