--- a/packages/Bundle/maps.html
+++ b/packages/Bundle/maps.html
@@ -29,7 +29,7 @@
 </div>
 
 <script>
-  MyVic.mountMap('#map', {
+  Myvic.mountMap('#map', {
     baseMapUrl: 'https://api.mapbox.com/styles/v1/myvictoira/cjio5h4do0g412smmef4qpsq5/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibXl2aWN0b2lyYSIsImEiOiJjamlvMDgxbnIwNGwwM2t0OWh3ZDJhMGo5In0.w_xKPPd39cwrS1F4_yy39g',
     center: [16136905.843820328, -4383057.013522999],
     zoom: 8,
@@ -41,7 +41,7 @@
     ]
   })
 
-  MyVic.mountMapWithTileLayer('#mapTileLayer', {
+  Myvic.mountMapWithTileLayer('#mapTileLayer', {
     center: [16136905.843820328, -4383057.013522999],
     zoom: 8
   }, {
@@ -51,7 +51,7 @@
     ]
   })
 
-  MyVic.mountMapWithVectorLayer('#mapVectorLayer', {
+  Myvic.mountMapWithVectorLayer('#mapVectorLayer', {
     center: [16136905.843820328, -4383057.013522999],
     zoom: 5
   }, {
@@ -63,7 +63,7 @@
     ]
   })
 
-  MyVic.mountMapWithVectorTileLayer('#mapVectorTileLayer', {
+  Myvic.mountMapWithVectorTileLayer('#mapVectorTileLayer', {
     center: [16136905.843820328, -4383057.013522999],
     zoom: 5,
     enableMapboxWatermark: true
