change geojson url in maps bundle

--- a/packages/Bundle/maps.html
+++ b/packages/Bundle/maps.html
@@ -55,7 +55,7 @@
     center: [16136905.843820328, -4383057.013522999],
     zoom: 5
   }, {
-    url: 'https://openlayers.org/en/latest/examples/data/geojson/countries.geojson',
+    url: 'countries.geojson',
     dataFormat: 'GeoJSON',
     labelAttribute: 'name',
     attributions: [
